fix types__text wrap

--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -366,6 +366,7 @@ body.light
     font-family: $font-alumni-sans-bold
     font-size: 30px
     letter-spacing: 1.2px
+    text-wrap: nowrap
     &--last
       right: 90px
   
